--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <string name="app_name">Mercadinho</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_detalhes">Detalhes do item</string>
 
 </resources>
